# gex

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  features.py  gex_dashboard.py  gex_pa_scalper.py  memory_export.json  pyproject.toml  pytest.ini  test_setup.py
archive/: gex_0dte.py  gex_monitor_v2.py
config/: config.docker.yaml  config.yaml
src/gex_monitor/: __init__.py  config.py  features.py  gex_calc.py  ib_client.py  main.py  state.py  storage.py  time_utils.py
src/gex_monitor/ui/: __init__.py  app.py  callbacks.py  layout.py
tests/: __init__.py  conftest.py  test_config.py  test_gex_calc.py  test_state.py  test_storage.py  test_time_utils.py
web/: README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/docs/: README.md  implementation-plan.en.md  implementation-plan.zh-TW.md
